interact with wave portal contract on client

--- a/waveportal-hardhat/package.json
+++ b/waveportal-hardhat/package.json
@@ -1,3 +1,22 @@
 {
-  "name": "hardhat-project"
+    "name": "waveportal-hardhat",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "deploy": "hardhat run scripts/deploy.js --network rinkeby",
+        "compile": "hardhat compile"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.5",
+        "@nomiclabs/hardhat-waffle": "^2.0.3",
+        "chai": "^4.3.6",
+        "ethereum-waffle": "^3.4.4",
+        "ethers": "^5.6.2",
+        "hardhat": "^2.9.3",
+        "dotenv": "^16.0.0"
+    }
 }
