--- a/waveportal-client/package.json
+++ b/waveportal-client/package.json
@@ -4,18 +4,20 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "ethers": "^5.6.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-styled-components": "^2.1.6"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.9.0"
   }
 }
