--- a/waveportal-hardhat/package.json
+++ b/waveportal-hardhat/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "deploy": "hardhat run scripts/deploy.js --network rinkeby",
+        "dev": "hardhat run scripts/run.js",
         "compile": "hardhat compile"
     },
     "keywords": [],
